# atomic_simulation

./: .env  README.md  docker-compose.yml
backend/: Dockerfile  README.md  requirements.txt
backend/alembic/: alembic.ini  env.py  script.py.mako
backend/alembic/versions/: __init__.py  initial_migration.py
backend/app/: calculations.py  database.py  main.py  models.py  schemas.py
frontend/app/: Cargo.toml  Dockerfile  README.md
frontend/app/src/: lib.rs
frontend/app/static/: index.html
